Centered page layout

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="game-container"></div>
+		<div id="page">
+			<div class="game-container"></div>
+		</div>
 		<script src="./tictactoe.js"></script>
 	</body>
 </html>
